data/src/objects/Custom_Opportunity_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Opportunity_Team__c</fullName>
        <label>Custom Opportunity Team</label>
        <referenceTo>Custom_Opportunity_Team__c</referenceTo>
        <relationshipLabel>Custom Opportunity Team Members</relationshipLabel>
        <relationshipName>Custom_Opportunity_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Opportunity_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Deal Support</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Custom Opportunity Team Member</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Custom Opportunity Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Opportunity Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>